--- a/_talks/2022-09-18-talk-1.md
+++ b/_talks/2022-09-18-talk-1.md
@@ -1,11 +1,16 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "Talk 1 on the TAS Cosmology seminar"
 collection: talks
 type: "Talk"
 permalink: /talks/2022-09-18-talk-1
 venue: "Tsinghua"
 date: 2022-09-18
-location: "Beijing"
+location: "C310B, Tsinghua, Beijing"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+# TAS Cosmology seminar
+
+第1次“鱼鱼聊鱼粥”微沙龙，活动简介、本学期将讨论的主要内容及宇宙学的（部分）主要内容。
+
+slides 见 [intro](https://siyizhao.github.io/yuzhou_TAS/intro/index.html)
+
