--- a/_talks/2022-09-18-talk-1.md
+++ b/_talks/2022-09-18-talk-1.md
@@ -5,12 +5,13 @@ type: "Talk"
 permalink: /talks/2022-09-18-talk-1
 venue: "Tsinghua"
 date: 2022-09-18
-location: "C310B, Tsinghua, Beijing"
+location: "C310B"
 ---
 
-# TAS Cosmology seminar
+# TAS Cosmology seminar - intro
 
-第1次“鱼鱼聊鱼粥”微沙龙，活动简介、本学期将讨论的主要内容及宇宙学的（部分）主要内容。
+第1次“鱼鱼聊鱼粥”微沙龙，内容包括：活动简介、本学期将讨论的主要内容及宇宙学的（部分）主要内容。
 
 slides 见 [intro](https://siyizhao.github.io/yuzhou_TAS/intro/index.html)
 
+参加讨论的鱼鱼有：zsy, zcx, wzq, zys, xf, yfz, wsh, tyy
